[gd_scene load_steps=12 format=3 uid="uid://dwv5aj4teuxtg"]

[ext_resource type="Texture2D" uid="uid://furp6nxqx8l0" path="res://assets/images/pig.png" id="1_24irw"]
[ext_resource type="Script" path="res://scenes/components/objects/mob.gd" id="1_slukd"]
[ext_resource type="Script" path="res://scripts/nodes/reflection2d.gd" id="2_kwf7w"]
[ext_resource type="AudioStream" uid="uid://bx38om1aavfe" path="res://assets/sounds/mobs/pig/pig-1.wav" id="4_l7hg0"]
[ext_resource type="AudioStream" uid="uid://qaqqyfgou86k" path="res://assets/sounds/mobs/pig/pig-2.wav" id="5_7yhrj"]
[ext_resource type="AudioStream" uid="uid://hg6jkfvvlvod" path="res://assets/sounds/mobs/pig/pig-4.wav" id="7_l63a7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ki7du"]
size = Vector2(77, 40)

[sub_resource type="Animation" id="Animation_l3d7v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0872665]
}

[sub_resource type="Animation" id="Animation_8khft"]
resource_name = "walk"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0872665, -0.0872665]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1d2hl"]
_data = {
"RESET": SubResource("Animation_l3d7v"),
"walk": SubResource("Animation_8khft")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_mvc02"]
random_pitch = 2.0
streams_count = 3
stream_0/stream = ExtResource("4_l7hg0")
stream_1/stream = ExtResource("5_7yhrj")
stream_2/stream = ExtResource("7_l63a7")

[node name="Mob" type="CharacterBody2D" groups=["objects"]]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_slukd")

[node name="Sprite2D" type="Sprite2D" parent="."]
visibility_layer = 2
position = Vector2(0, -14)
rotation = 0.0872665
texture = ExtResource("1_24irw")

[node name="Reflection2D" type="Node2D" parent="." node_paths=PackedStringArray("reflection_sprite")]
script = ExtResource("2_kwf7w")
reflection_sprite = NodePath("../Sprite2D")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -11)
shape = SubResource("RectangleShape2D_ki7du")

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1d2hl")
}
autoplay = "walk"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_mvc02")
volume_db = 12.0
max_distance = 500.0

[node name="MiscSoundTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="navigation_finished" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_navigation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="MiscSoundTimer" to="." method="_on_misc_sound_timer_timeout"]
